feat: make page more accessible

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -20,14 +20,39 @@
   margin: 0 auto;
 
   padding: 24px 20px;
+}
 
-  color: #555;
+.content h1 {
+  margin-bottom: 20px;
 }
 
 .content h2 {
-  margin-bottom: 20px;
+  font-size: 24px;
+}
+
+.content h2 {
+  font-size: 18px;
 }
 
 .content p {
   margin: 20px 0;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  max-width: 1064px;
+  width: 100%;
+  margin: 0 auto;
+
+  padding: 24px 20px;
+}
+
+.footer a {
+  padding: 1rem 2rem;
+  border-radius: 5px;
+
+  color: #996dff;
 }
