feat: create modal for TOS

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -50,9 +50,42 @@
   padding: 24px 20px;
 }
 
-.footer a {
+.footer button {
   padding: 1rem 2rem;
   border-radius: 5px;
 
   color: #996dff;
+  background: transparent;
+  font-size: 1rem;
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  padding: 120px;
+  border-radius: 5px;
+  color: #333;
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.75);
+  position: fixed;
+  inset: 0;
+}
+
+.closeModalButton {
+  width: 100%;
+  padding: 12px 20px;
+  margin-top: 16px;
+
+  background: #8257e5;
+  color: #fff;
+  
+  font-size: 18px;
+  font-weight: bold;
+
+  border-radius: 5px;
 }
